Fix tab alignment on updated theme

--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -940,15 +940,6 @@ i.spacewalk-help-link {
       padding-bottom: 1px;
     }
   }
-  .nav-tabs-indent(1);
-  .nav-tabs-indent(2);
-  .nav-tabs-indent(3);
-
-  .nav-tabs-indent(@i) {
-    &:nth-child(@{i}) {
-      margin-left: (@i - 1) * 30px;
-    }
-  }
 }
 
 /* Override rules from theme.less that uses
